[gd_scene load_steps=20 format=3 uid="uid://cupbpqy4wort8"]

[ext_resource type="MeshLibrary" uid="uid://dvk63i0581pcw" path="res://tileset.tres" id="1_57cci"]
[ext_resource type="AudioStream" uid="uid://bsu8wkjgkkmm2" path="res://Audio/sick-snares.wav" id="1_t0ad7"]
[ext_resource type="Script" path="res://Player.gd" id="2_6ue05"]
[ext_resource type="Script" path="res://Scripts/PlayerInteractions.gd" id="3_oy0lc"]
[ext_resource type="PackedScene" uid="uid://c6aevmmjmnni3" path="res://fire.tscn" id="3_ro3ml"]
[ext_resource type="PackedScene" uid="uid://cckolhcjp1ynd" path="res://Equipment/torch.tscn" id="4_jrua6"]
[ext_resource type="Shader" path="res://wood.gdshader" id="6_4dbke"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4r403"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_1l1ei"]
sky_material = SubResource("ProceduralSkyMaterial_4r403")

[sub_resource type="Environment" id="Environment_lv3i4"]
background_mode = 2
sky = SubResource("Sky_1l1ei")
ambient_light_color = Color(1, 0.94902, 0.8, 1)
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.02
tonemap_mode = 2
glow_enabled = true
fog_enabled = true
fog_light_color = Color(1, 0.94902, 0.8, 1)
fog_light_energy = 0.02
fog_density = 0.45

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qfsxq"]
render_priority = 0
shader = ExtResource("6_4dbke")
shader_parameter/light_color = Vector4(0.952941, 0.858824, 0.74902, 1)
shader_parameter/dark_color = Vector4(0.74902, 0.619608, 0.490196, 1)
shader_parameter/ring_scale = 4.4
shader_parameter/wave_scale = 8.454
shader_parameter/random_scale = 4.6
shader_parameter/noise_scale = 0.03

[sub_resource type="BoxMesh" id="BoxMesh_4vu2i"]
material = SubResource("ShaderMaterial_qfsxq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g1uis"]
albedo_color = Color(0.556863, 1, 0.34902, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ntpj0"]
material = SubResource("StandardMaterial3D_g1uis")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ign7y"]

[sub_resource type="Animation" id="Animation_ykapo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Stick:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Stick/StickMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.265013, -0.489232, -0.33117)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Stick/StickMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0.222861)]
}

[sub_resource type="Animation" id="Animation_44uvf"]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Stick/StickMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.161643, -0.347234, -0.33117)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Stick/StickMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -0.981905)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Stick:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.638494, 0)]
}

[sub_resource type="Animation" id="Animation_w0rx5"]
resource_name = "idle"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Stick:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Stick/StickMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.265013, -0.489232, -0.33117), Vector3(0.265013, -0.518518, -0.33117)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Stick/StickMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0.222861), Vector3(0, 0, 0.313339)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_08wpc"]
_data = {
"RESET": SubResource("Animation_ykapo"),
"attack": SubResource("Animation_44uvf"),
"idle": SubResource("Animation_w0rx5")
}

[node name="World" type="Node"]

[node name="Ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_t0ad7")
volume_db = -10.0
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lv3i4")

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
mesh_library = ExtResource("1_57cci")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 65535, 2, 0, 65535, 2, 0, 0, 2, 65535, 0, 2, 2, 65535, 1, 2, 0, 1441793, 65534, 1, 655361, 65534, 65534, 1048577, 0, 2, 1441792, 65535, 2, 1048576, 0, 4, 1441792, 0, 5, 1441792, 65535, 4, 1048576, 65535, 5, 1048576, 0, 6, 1441793, 65535, 6, 655361, 65534, 65535, 1048579, 65534, 0, 655363, 65535, 65534, 1048579, 1, 0, 1441795, 0, 1, 1441795, 65535, 1, 655363, 65533, 0, 655360, 65533, 65535, 0, 65532, 65535, 0, 65532, 0, 655360, 65531, 0, 1441795, 65531, 65535, 3, 65531, 65534, 1, 65531, 1, 1441793, 65530, 1, 655361, 65530, 65534, 1048577, 65530, 0, 1048576, 65530, 65535, 1048576, 1, 1, 1441793, 65535, 3, 1048576, 0, 3, 1441792, 65535, 65533, 1048577, 1, 65534, 1441792, 1, 65533, 1, 1, 65535, 3, 0, 65534, 2, 0, 65533, 4)
}

[node name="Fire" parent="." instance=ExtResource("3_ro3ml")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.384158, 0)

[node name="Stick1" type="Node3D" parent="Fire"]
transform = Transform3D(0.986475, 0.0604515, -0.152357, -0.163911, 0.363818, -0.916935, 0, 0.929506, 0.368806, 0.0701057, 0.116669, 0)

[node name="StickMesh" type="MeshInstance3D" parent="Fire/Stick1"]
transform = Transform3D(0.075, 0, 0, 0, -0.527105, -0.00991537, 0, -0.0553173, 0.0944812, 0.102529, -0.148186, 0.368971)
mesh = SubResource("BoxMesh_4vu2i")

[node name="Stick2" type="Node3D" parent="Fire"]
transform = Transform3D(0.655937, 0.745315, 0.119381, -0.10899, 0.250022, -0.962086, -0.746905, 0.618057, 0.24523, 0.0701057, 0.116669, 0)

[node name="StickMesh" type="MeshInstance3D" parent="Fire/Stick2"]
transform = Transform3D(0.075, 0, 0, 0, -0.527105, -0.00991537, 0, -0.0553173, 0.0944812, 0.102529, -0.148186, 0.368971)
mesh = SubResource("BoxMesh_4vu2i")

[node name="Stick3" type="Node3D" parent="Fire"]
transform = Transform3D(-0.71865, 0.688591, 0.0968743, 0.11941, 0.259447, -0.958347, -0.685043, -0.677148, -0.268676, 0.0701057, 0.116669, 0)

[node name="StickMesh" type="MeshInstance3D" parent="Fire/Stick3"]
transform = Transform3D(0.075, 0, 0, 0, -0.527105, -0.00991537, 0, -0.0553173, 0.0944812, 0.102529, -0.148186, 0.368971)
mesh = SubResource("BoxMesh_4vu2i")

[node name="Stick4" type="Node3D" parent="Fire"]
transform = Transform3D(-0.71865, 0.688591, 0.0968743, -0.265144, -0.14256, -0.953612, -0.642839, -0.710998, 0.285027, 0.192116, 0.0255696, -0.193316)

[node name="StickMesh" type="MeshInstance3D" parent="Fire/Stick4"]
transform = Transform3D(0.075, 0, 0, 0, -0.527105, -0.00991537, 0, -0.0553173, 0.0944812, 0.102529, -0.148186, 0.368971)
mesh = SubResource("BoxMesh_4vu2i")

[node name="OmniLight3D" type="OmniLight3D" parent="Fire"]
light_color = Color(1, 0.682353, 0.168627, 1)
omni_range = 15.0

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 6)
script = ExtResource("2_6ue05")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_ntpj0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_ign7y")

[node name="PlayerInteractions" type="Camera3D" parent="Player" node_paths=PackedStringArray("gridmap")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
script = ExtResource("3_oy0lc")
gridmap = NodePath("../../GridMap")

[node name="Torch" parent="Player/PlayerInteractions" instance=ExtResource("4_jrua6")]
transform = Transform3D(-1.12266e-08, 7.24074e-11, 0.25, 0.0588831, 0.242967, 2.57387e-09, -0.242967, 0.0588831, -1.09278e-08, -0.317645, -0.556195, -0.621395)

[node name="TorchLight" type="SpotLight3D" parent="Player/PlayerInteractions/Torch"]
transform = Transform3D(-4.37114e-08, -0.0264211, -0.999651, -8.56238e-15, 0.999651, -0.0264211, 1, -1.1549e-09, -4.36961e-08, 0.993634, 0.0536764, -5.96046e-08)
light_color = Color(1, 0.964706, 0.8, 1)
light_energy = 1.2
spot_range = 7.5
spot_angle = 40.0

[node name="RayCast3D" type="RayCast3D" parent="Player/PlayerInteractions"]
transform = Transform3D(1.5, 0, 0, 0, 0.742528, -1.30332, 0, 1.30332, 0.742528, 0, 0, 0)

[node name="TorchClicker" type="AudioStreamPlayer3D" parent="Player/PlayerInteractions"]

[node name="KnockKnock" type="AudioStreamPlayer3D" parent="Player/PlayerInteractions"]

[node name="GodlyVoice" type="AudioStreamPlayer3D" parent="Player/PlayerInteractions"]

[node name="Swish" type="AudioStreamPlayer3D" parent="Player/PlayerInteractions"]

[node name="Stick" type="Node3D" parent="Player/PlayerInteractions"]

[node name="StickMesh" type="MeshInstance3D" parent="Player/PlayerInteractions/Stick"]
transform = Transform3D(-0.0487635, 0.221021, 0, -0.011051, -0.975269, 0, 0, 0, -0.05, 0.265013, -0.489232, -0.33117)
mesh = SubResource("BoxMesh_4vu2i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/PlayerInteractions"]
libraries = {
"": SubResource("AnimationLibrary_08wpc")
}
autoplay = "idle"
playback_default_blend_time = 0.1

[connection signal="animation_finished" from="Player/PlayerInteractions/AnimationPlayer" to="Player/PlayerInteractions" method="_on_animation_player_animation_finished"]
